# qr-code-generator

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
